[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Judah/Citizen/Images/Down/judah_citizen_down_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Judah/Citizen/Images/Down/judah_citizen_down_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Judah/Citizen/Images/Down/judah_citizen_down_2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "move_down",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "move_down"

[node name="Down_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17 )
rotation = 3.14159
scale = Vector2( 0.8, 0.4 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Up_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
scale = Vector2( 0.8, 0.4 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Left_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
rotation = 1.5708
scale = Vector2( 1.28, 0.4 )
shape = SubResource( 4 )
one_way_collision = true

[node name="Right_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
rotation = 4.71239
scale = Vector2( 1.28, 0.4 )
shape = SubResource( 5 )
one_way_collision = true

[connection signal="area_shape_entered" from="." to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Area2D_area_shape_exited"]
